--- a/mod-domain/grails-app/i18n/messages.properties
+++ b/mod-domain/grails-app/i18n/messages.properties
@@ -54,3 +54,5 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+user.username.unique=There is already a user with this name in our database
